Separate out parser and update to Java 21 (#5)